--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.metabit.custom.safe</groupId>
 	<artifactId>safesealing</artifactId>
 	<packaging>jar</packaging>
-	<version>0.7.3</version>
+	<version>0.7.3-SNAPSHOT</version>
 	<name>SAFEevSealing</name>
 
 	<licenses>
@@ -236,7 +236,20 @@
 	</build>
 
 	<profiles>
-
+		<profile>
+			<id>github</id>
+			<activation>
+				<property>
+					<name>env.GITHUB_REPOSITORY</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<url>https://maven.pkg.github.com/${env.GITHUB_REPOSITORY}</url>
+				</repository>
+			</distributionManagement>
+		</profile>
 	</profiles>
 
 </project>
